# StorageYadro

./: .gitignore  CMakeLists.txt
content/: JBOD1.txt
results/: описание
results/1HealthyServer/: count.csv  file
results/2HealthyServers/: count.csv  file
results/3HealthyServers/: count.csv  file
results/BandwidthDegradation5times/: count.csv  file
results/normal/: count.csv  file  plots.ipynb
src/: PCIeFabric.cpp  adapter.cpp  cache.cpp  client.cpp  counter.cpp  dataset_generator.cpp  drive.cpp  load_balancer.cpp  main.cpp  my_functions.h  server.cpp  storage.cpp  storage.h  storage_system.cpp  storage_system.h  structures.h
topgen/: deployment.xml  platform.xml  topdep.py  topoloy_generator.py
unness/: deployment.xml  platform.xml
